--- a/rosa_hcp/rosa-hcp-creating-cluster-with-aws-kms-key.adoc
+++ b/rosa_hcp/rosa-hcp-creating-cluster-with-aws-kms-key.adoc
@@ -3,7 +3,7 @@
 = Creating ROSA with HCP clusters using a custom AWS KMS encryption key
 include::_attributes/attributes-openshift-dedicated.adoc[]
 :context: rosa-hcp-creating-cluster-with-aws-kms-key
-
+Test.
 toc::[]
 
 Create a {product-title} (ROSA) with a {hcp} (HCP) cluster  using a custom AWS Key Management Service (KMS) key.
